--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,22 @@
 import java.text.SimpleDateFormat
 
+buildscript {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven { url "https://jcenter.bintray.com/" }
+        google()
+        mavenCentral()
+        maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
+        maven { url "https://jitpack.io" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
+    }
+    dependencies {
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4"
+    }
+}
+
 plugins {
     id "com.jfrog.bintray" version "1.8.4"
 }
@@ -22,7 +39,7 @@ def getDevelopmentVersion() {
     }
     def version = new SimpleDateFormat('yyyy-MM-dd\'T\'HH-mm-ss').format(new Date()) + "-" + gitHash
     println "created development version: $version"
-    version
+    "13.0.1-jahia" // custom version, to be updated when releasing a new patch
 }
 
 
@@ -38,6 +55,13 @@ group = 'com.graphql-java'
 repositories {
     mavenCentral()
     mavenLocal()
+    maven { url "https://jcenter.bintray.com/" }
+    google()
+    mavenCentral()
+    maven { url 'https://nexus.web.cern.ch/nexus/content/repositories/public/' }
+    maven { url "https://jitpack.io" }
+    maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
 }
 
 apply plugin: 'groovy'
