--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 import java.text.SimpleDateFormat
 
-plugins {
-    id "com.jfrog.bintray" version "1.8.4"
+buildscript {
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        // add this repository that has the old org.codehaus.groovy.modules.http-builder:http-builder:0.7.2 jar
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
+    }
 }
 
 apply plugin: 'java'
@@ -128,9 +133,25 @@ allprojects {
 }
 
 publishing {
-
     publications {
-
+        maven(MavenPublication) {
+            groupId = 'io.github.bensku'
+            artifactId = 'java-ts-bind'
+            version = '1.0.0-jahia-3'
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            name = "jahia-releases"
+            url = uri("https://devtools.jahia.com/nexus/content/repositories/jahia-releases")
+            credentials {
+                username = System.getenv("NEXUS_USERNAME")
+                password = System.getenv("NEXUS_PASSWORD")
+            }
+        }
+    }
+    publications {
         graphqlJava(MavenPublication) {
             version version
             from components.java
@@ -154,58 +175,21 @@ publishing {
                 pomNode.children().last() + {
                     resolveStrategy = Closure.DELEGATE_FIRST
                     name 'graphql-java'
-                    description 'GraphqL Java'
-                    url "https://github.com/graphql-java/graphql-java"
+                    description 'Fork of GraphqL Java by Jahia'
+                    url "https://github.com/Jahia/graphql-java"
                     scm {
-                        url "https://github.com/graphql-java/graphql-java"
-                        connection "https://github.com/graphql-java/graphql-java"
-                        developerConnection "https://github.com/graphql-java/graphql-java"
+                        url "scm:git:git@github.com:Jahia/graphql-java.git"
+                        connection "scm:git:git@github.com:Jahia/graphql-java.git"
+                        developerConnection "scm:git:git@github.com:Jahia/graphql-java.git"
                     }
                     licenses {
                         license {
                             name 'MIT'
-                            url 'https://github.com/graphql-java/graphql-java/blob/master/LICENSE.md'
+                            url 'https://github.com/Jahia/graphql-java/blob/master/LICENSE.md'
                             distribution 'repo'
                         }
                     }
-                    developers {
-                        developer {
-                            id 'andimarek'
-                            name 'Andreas Marek'
-                        }
-                    }
                 }
-            }
-        }
-    }
-}
-
-
-bintray {
-    user = System.env.BINTRAY_USER ?: project["bintray.user"]
-    key = System.env.BINTRAY_API_KEY ?: project["bintray.key"]
-    publications = ['graphqlJava']
-    publish = true
-    pkg {
-        repo = 'graphql-java'
-        name = 'graphql-java'
-        desc = 'GraphQL in Java'
-        licenses = ['MIT']
-        vcsUrl = 'https://github.com/graphql-java/graphql-java'
-
-        version {
-            name = project.version
-            desc = project.description
-            released = new Date()
-            vcsTag = 'v' + project.version
-            gpg {
-                sign = true
-            }
-            mavenCentralSync {
-                sync = true
-                user = System.env.MAVEN_CENTRAL_USER
-                password = System.env.MAVEN_CENTRAL_PASSWORD
-                close = '1'
             }
         }
     }
